--- a/css/v2-light.css
+++ b/css/v2-light.css
@@ -134,3 +134,19 @@ th {
 }
 
 #forkongithub a{background:#fff;color:#777 !important;text-decoration:none;font-style: normal;font-family:arial,sans-serif;text-align:center;font-weight:bold;padding:5px 40px;font-size:1rem;line-height:2rem;position:relative;transition:0.5s;}#forkongithub a:hover{background:#999;color:#eee !important;text-decoration: none !important;}#forkongithub a::before,#forkongithub a::after{content:"";width:100%;display:block;position:absolute;top:1px;left:0;height:1px;background:#ccc;}#forkongithub a::after{bottom:1px;top:auto;}@media screen and (min-width:800px){#forkongithub{position:fixed;display:block;top:0;right:0;width:200px;overflow:hidden;height:200px;z-index:9999;}#forkongithub a{width:200px;position:absolute;top:60px;right:-60px;transform:rotate(45deg);-webkit-transform:rotate(45deg);-ms-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);box-shadow:4px 4px 10px rgba(200,200,200,0.8);}}
+
+
+.tbl-peers td:nth-of-type(1):before { content: "IP"; }
+.tbl-peers td:nth-of-type(2):before { content: "Time Connected"; }
+.tbl-peers td:nth-of-type(3):before { content: "Protocol Version"; }
+.tbl-peers td:nth-of-type(4):before { content: "Last Send"; }
+.tbl-peers td:nth-of-type(5):before { content: "Last Receive"; }
+.tbl-peers td:nth-of-type(6):before { content: "Ping (ms)"; }
+.tbl-peers td:nth-of-type(7):before { content: "Bytes Sent"; }
+.tbl-peers td:nth-of-type(8):before { content: "Bytes Received "; }
+.tbl-peers td:nth-of-type(9):before { content: "Direction"; }
+
+.tbl-txes td:nth-of-type(2):before { content: "Txid"; }
+.tbl-txes td:nth-of-type(3):before { content: "Time"; }
+.tbl-txes td:nth-of-type(4):before { content: "Conf"; }
+.tbl-txes td:nth-of-type(5):before { content: "Amount"; }
