--- a/css/table.css
+++ b/css/table.css
@@ -37,15 +37,20 @@
     white-space: nowrap;
   }
 
-  /* Label the data */
-  #t01td:nth-of-type(1):before { content: "IP"; }
-  td:nth-of-type(2):before { content: "Time Connected"; }
-  td:nth-of-type(3):before { content: "Protocol Version"; }
-  td:nth-of-type(4):before { content: "Last Send"; }
-  td:nth-of-type(5):before { content: "Last Receive"; }
-  td:nth-of-type(6):before { content: "Ping (ms)"; }
-  td:nth-of-type(7):before { content: "Bytes Sent"; }
-  td:nth-of-type(8):before { content: "Bytes Received "; }
-  td:nth-of-type(9):before { content: "Direction"; }
+
+.tbl-peers td:nth-of-type(1):before { content: "IP"; }
+.tbl-peers td:nth-of-type(2):before { content: "Time Connected"; }
+.tbl-peers td:nth-of-type(3):before { content: "Protocol Version"; }
+.tbl-peers td:nth-of-type(4):before { content: "Last Send"; }
+.tbl-peers td:nth-of-type(5):before { content: "Last Receive"; }
+.tbl-peers td:nth-of-type(6):before { content: "Ping (ms)"; }
+.tbl-peers td:nth-of-type(7):before { content: "Bytes Sent"; }
+.tbl-peers td:nth-of-type(8):before { content: "Bytes Received "; }
+.tbl-peers td:nth-of-type(9):before { content: "Direction"; }
+
+.tbl-txes td:nth-of-type(2):before { content: "Txid"; }
+.tbl-txes td:nth-of-type(3):before { content: "Time"; }
+.tbl-txes td:nth-of-type(4):before { content: "Conf"; }
+.tbl-txes td:nth-of-type(5):before { content: "Amount"; }
 
 }
